--- a/scss/layout/_layout.scss
+++ b/scss/layout/_layout.scss
@@ -10,7 +10,18 @@
 
 .grid-navigation-wrapper {
   @include mq(l) {
-    display: fixed;
+    position: fixed;
     top: 0%;
+    height: 100%;
+    width: 200px;
+  }
+}
+
+.grid-content-wrapper {
+  @include mq(l) {
+    position: relative;
+    height: 100%;
+    width: calc(100vw - 200px);
+    margin-left: 200px;
   }
 }
