--- a/scss/partials/_nav.scss
+++ b/scss/partials/_nav.scss
@@ -6,7 +6,7 @@
   @include mq(l) {
     flex-direction: column;
     align-items: center;
-    height: 100vh;
+    height: 100%;
   }
 
   &__logo {
@@ -69,6 +69,7 @@
     order: 4;
     @include mq(l) {
       display: flex;
+      margin-top: auto;
     }
   }
 }
